--- a/videotizame/src/styles/Info.css
+++ b/videotizame/src/styles/Info.css
@@ -2,16 +2,18 @@
 .Info-container{
     display:block;
     width: 350px;
-    margin-top: 250px;
+    margin-top: 45px;
 }
 .Info-text{
     color:#fff;
-    font-size:3rem;
+    font-size:2rem;
     font-family: 'Montserrat';
     margin-left:425px;
     display: block;
-    width:750px;
+    width:700px;
+    font-weight: lighter;
 }
 .brand-img{
-    margin-left:750px;
+    margin-left:570px;
+    width: 335px;
 }
