--- a/videotizame/src/styles/Initiate.css
+++ b/videotizame/src/styles/Initiate.css
@@ -1,12 +1,13 @@
 body{
-    background-image: url('../images/film_movie.jpg');
+    background-color:#000;
     margin:0;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     width:100%;
-    height:1024px;
+    height: 100%;
 }
 .Initiate-container{
-    background-color: rgba(0,0,0,0.45)!important;
+    background-color: rgba(250, 250, 250, 0.09)!important;
+    height: 715px;
 }
